horizontal scroll fix

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ body {
     max-height : 10em;
 }
 
-a{
+a, a:hover{
     text-decoration: none;
     color:inherit;
 }
